# flow_matching

./: .gitignore  README.md  bench.py  config.py  dataset.py  demo.py  load_dataset.py  model.py  model_summary.txt  profile.json  pyproject.toml  pytorch_profile.txt  pytorch_trace.json  train.py
configs/: config.yaml
configs/experiment/: debug.yaml  full_scale.yaml  hparam_tuning.yaml  overfit.yaml  stability.yaml
outputs/2025-11-05/13-01-12/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-05/13-05-31/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-05/13-07-13/.hydra/: hydra.yaml
outputs/2025-11-05/13-08-18/.hydra/: hydra.yaml
outputs/2025-11-05/13-08-43/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-05/13-10-19/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-05/13-11-19/.hydra/: hydra.yaml
outputs/2025-11-05/13-13-24/.hydra/: config.yaml  hydra.yaml
src/flow_matching/: checkpoint.py  config.py  dataset.py  distributed.py  load_dataset.py  metrics.py  model.py  types.py
